# cc_plan_viewer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_CN.md  README_EN.md  index.html  justfile  notify.bat  package.json  pnpm-lock.yaml  setup.bat  setup.py  start-server.bat  uninstall.bat  uninstall.py  vite.config.js
.github/workflows/: release.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/development/: architecture.md  customization.md  index.md  tauri.md
docs/features/: comments.md  file-watcher.md  index.md  mermaid.md  themes.md
docs/guide/: basic-usage.md  faq.md  index.md  installation.md  review-workflow.md
docs/zh/: index.md
plan-viewer-vscode/: .vscodeignore  CHANGELOG.md  README.md  esbuild.mjs  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.webview.json  vitest.config.ts
plan-viewer-vscode/dist-webview/: _basePickBy-T6ZpOwSo.js  _baseUniq-BHLDg-KO.js  architectureDiagram-VXUJARFQ-DTYyNeD4.js  blockDiagram-VD42YOAC-B_VCbmKQ.js  c4Diagram-YG6GDRKO-hDWvUaK3.js  chunk-4BX2VUAB-D2rZOlq_.js  chunk-55IACEB6-BsYfnNTe.js  chunk-B4BG7PRW-Dly66UPp.js  chunk-DI55MBZ5-vYQNZ2-9.js  chunk-FMBD7UC4-Cbywqxeq.js  chunk-QN33PNHL-ZzOiNxx6.js  chunk-QZHKN3VN-DhFarhQn.js  chunk-TZMSLE5B-B247xUFg.js  classDiagram-v2-WZHVMYZB-4V5fJXur.js  clone-DWzg50c_.js  cose-bilkent-S5V4N54A-D0jIyrtq.js  dagre-6UL2VRFP-BuKz9_jU.js  diagram-PSM6KHXK--dl5aBHt.js  diagram-QEK2KX5R-BPBqmzEO.js  (+25 more)
scripts/: check-version.cjs  copy-artifacts.cjs  sync-version.cjs
src/: app.js  i18n.js  icons.js  main.js  styles.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  commands.rs  main.rs  plan.rs  source.rs  wsl.rs
src-tauri/src/ssh/: config.rs  connection.rs  mod.rs  operations.rs
(+60 files in other folders)
