[package]
name = "plan-viewer"
version = "1.3.0"
description = "A desktop viewer for Claude Code plans"
authors = [""]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
russh = "0.51"
russh-sftp = "2.1"
ssh-key = { version = "0.6", features = ["std"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
